[package]
name = "perdir"
version = "0.1.0"
edition = "2021"
description = "Per-directory environments for Linux: declare, enter, run, inspect."
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_GITHUB_USERNAME/perdir"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
which = "6.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
